// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoHeightMinimization DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-1-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-1-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-1-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-1-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-1-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
          style={
            Object {
              "height": "14.5rem",
            }
          }
        >
          <ul
            aria-describedby="option-drag-label-1-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-1-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Mango"
                  >
                    Mango
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-1-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
          style={
            Object {
              "height": "14.5rem",
            }
          }
        >
          <ul
            aria-describedby="option-drag-label-1-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-1-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pineapple"
                  >
                    Pineapple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Grapes"
                  >
                    Grapes
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-2-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-2-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-2-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-2-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-2-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-2-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-2-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-2-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-2-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-2-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Disabled DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-3-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-3-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-3-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-3-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-3-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options slds-is-disabled"
        >
          <ul
            aria-describedby="option-drag-label-3-option-drag-label"
            aria-disabled={true}
            aria-labelledby="options-label-3-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-3-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options slds-is-disabled"
        >
          <ul
            aria-describedby="option-drag-label-3-option-drag-label"
            aria-disabled={true}
            aria-labelledby="selected-label-3-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`IsReorderable DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-4-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-4-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-4-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-4-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-4-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-4-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-4-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-4-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-4-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-4-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#up"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move Selection Up
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move Selection Down
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Locked DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-5-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-5-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-5-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-5-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-5-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-5-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-5-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-5-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-5-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-5-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
                <span
                  className="slds-media__figure slds-media__figure_reverse"
                >
                  <span
                    className="slds-icon_container"
                    title="Locked item"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_xx-small slds-icon-text-default"
                      >
                        <use
                          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#lock"
                        />
                      </svg>
                      
                    </span>
                    <span
                      className="slds-assistive-text"
                    >
                      : 
                      Item cannot be moved
                    </span>
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#up"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move Selection Up
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move Selection Down
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManualHeight DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-6-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-6-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-6-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-6-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-6-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
          style={
            Object {
              "height": "20rem",
            }
          }
        >
          <ul
            aria-describedby="option-drag-label-6-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-6-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-6-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
          style={
            Object {
              "height": "20rem",
            }
          }
        >
          <ul
            aria-describedby="option-drag-label-6-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-6-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Required DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-7-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-7-picklist-group-label"
  >
    <abbr
      className="slds-required"
      title="required"
    >
      *
       
    </abbr>
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-7-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-7-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-7-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-7-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-7-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-7-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-7-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-7-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Responsive DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-8-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-8-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-8-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-8-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column slds-dueling-list__column_responsive"
      >
        <span
          className="slds-form-element__label"
          id="options-label-8-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-8-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-8-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column slds-dueling-list__column_responsive"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column slds-dueling-list__column_responsive"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-8-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-8-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-8-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip DOM Snapshot 1`] = `
<div
  aria-labelledby="picklist-label-9-picklist-group-label"
  className="slds-form-element"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="group"
>
  <span
    className="slds-form-element__label slds-form-element__legend"
    id="picklist-label-9-picklist-group-label"
  >
    Select Options
  </span>
  <div
    className="slds-tooltip-trigger"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <a
      aria-describedby="tooltip"
      href="javascript:void(0)"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_x-small slds-icon-text-default"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#info"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Tooltip with icon
        </span>
      </span>
    </a>
    <span />
  </div>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-dueling-list"
    >
      <div
        aria-live="assertive"
        className="slds-assistive-text"
        id="drag-live-region-9-drag-live-region"
      />
      <div
        className="slds-assistive-text"
        id="option-drag-label-9-option-drag-label"
      >
        Press space bar when on an item, to move it within the list. CMD plus left and right arrow keys, to move items between lists.
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="options-label-9-options-label"
        >
          First Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-9-option-drag-label"
            aria-disabled={false}
            aria-labelledby="options-label-9-options-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Apple"
                  >
                    Apple
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Banana"
                  >
                    Banana
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Orange"
                  >
                    Orange
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#right"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to Second Category
          </span>
        </button>
        <button
          className="slds-button slds-button_icon-container"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#left"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Move selection to First Category
          </span>
        </button>
      </div>
      <div
        className="slds-dueling-list__column"
      >
        <span
          className="slds-form-element__label"
          id="selected-label-9-selected-label"
        >
          Second Category
        </span>
        <div
          className="slds-dueling-list__options"
        >
          <ul
            aria-describedby="option-drag-label-9-option-drag-label"
            aria-disabled={false}
            aria-labelledby="selected-label-9-selected-label"
            aria-multiselectable={true}
            className="slds-listbox slds-listbox_vertical"
            role="listbox"
          >
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="0"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Pear"
                  >
                    Pear
                  </span>
                </span>
              </div>
            </li>
            <li
              className="slds-listbox__item"
              role="presentation"
            >
              <div
                aria-selected={false}
                className="slds-listbox__option slds-listbox__option_plain slds-media slds-media_small slds-media_inline"
                onClick={[Function]}
                onFocus={[Function]}
                role="option"
                tabIndex="-1"
              >
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Watermelon"
                  >
                    Watermelon
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewOnly DOM Snapshot 1`] = `
<div
  className="slds-dueling-list"
>
  <div
    className="slds-form-element"
  >
    <span
      className="slds-form-element__label"
    >
      Selected Items
    </span>
    <div
      className="slds-form-element__control"
    >
      <span
        className="slds-form-element__static"
      >
        Pear, Watermelon
      </span>
    </div>
  </div>
</div>
`;
